--- a/Agenda.DAL.Test/packages.config
+++ b/Agenda.DAL.Test/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoFixture" version="2.0" targetFramework="net35" />
+  <package id="Moq" version="3.1.416.3" targetFramework="net35" />
   <package id="NUnit" version="3.13.0" targetFramework="net35" />
   <package id="NUnit3TestAdapter" version="3.13.0" targetFramework="net35" />
 </packages>
